@@ -1,3 +1,9 @@
+2007-02-06  Paul J Stevens <paul@nfg.nl>
+
+	* dbmail-message.c:
+	headernames in cache must be case-insentitive
+
+
 2007-02-05  Aaron Stone  <aaron@serendipity.cx>
 
 	* db.c:
